Fix maven gpg signing (#35)